# Blueprint-SDLC-Hub-Prototype

./: PRISMA_READY.md  README.md  README_OLD.md  TODO.md  log.txt  package.json  result.txt
.github/: copilot-instructions.md
app/generator-test/: page.tsx
backend/: PHASE_2_COMPLETION_REPORT.md  api.py  app.py  docker-compose.yml  llm_to_excalidraw.py  pyproject.toml  test_docker_files.py  test_viz.py
backend/docs/json/: spec_2026-02-26-14-55-24-918871.json  spec_2026-02-26-14-56-51-429792.json  spec_2026-02-26-15-00-10-417869.json  spec_2026-02-26-15-01-03-237740.json  spec_2026-02-26-15-01-40-619952.json  spec_2026-02-28-01-43-34-659789.json  spec_2026-02-28-01-47-01-207204.json  spec_2026-02-28-19-44-25-502664.json  spec_2026-03-01-00-45-53-412216.json  spec_2026-03-01-00-46-00-119469.json  spec_2026-03-01-01-15-54-937619.json  spec_2026-03-02-14-51-53-044372.json  spec_2026-03-02-14-53-16-184996.json  spec_2026-03-02-15-23-19-609345.json  spec_2026-03-02-15-50-19-561926.json  spec_2026-03-02-15-52-54-625510.json  spec_2026-03-02-17-13-02-060308.json  spec_2026-03-02-17-16-35-983296.json  spec_2026-03-02-17-19-04-739335.json
components/: ActivityHeatmap.tsx  ArtifactViewer.tsx  BlueprintDetail.tsx  UserProfileView.tsx
docs/: TESTING_STRATEGY.md
docs/session-notes/: 2026-03-02-developer-experience-mcp-board.md  README.md
frontend/: vitest.config.ts
utils/: templateGenerator.tsx
